[tool.poetry]
name = "hoyolab-auto-login"
version = "0.1.1"
description = "A simple program to always claim Hoyolab's daily login system for Hoyoverse games"
authors = ["Raiden Sakura <raiden@project-mei.xyz>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9 <3.12"
python-dotenv = "^1.0.0"
2captcha-python = "^1.2.2"
python3-capsolver = "^0.9.2"
schedule = "^1.2.1"
pytz = "^2023.3.post1"
genshin = "^1.6.1"
discord-webhook = {extras = ["async"], version = "^1.3.0"}

[tool.poetry.group.dev.dependencies]
black = "^23.12.1"
ruff = "^0.1.9"
pre-commit = "^3.6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = "110"
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
(
  /(
      \.eggs
    | \.git
    | \.venv
    | venv
    | venv2
    | _build
    | build
    | dist
    | plugins
    | temp
  )/
)
'''

[tool.ruff]
target-version = "py310"
line-length = 110
select = ["C90", "E", "F", "I001", "PGH004", "RUF100"]
ignore = ["F405", "E741", "C901", "F403", "E501"]
fix = true
fixable = ["I001"]
isort.combine-as-imports = true
force-exclude = true

[tool.ruff.mccabe]
# Unlike Flake8, default to a complexity level of 10.
max-complexity = 25
